updates (w titles and breakdowns)

--- a/1_data_process.ipynb
+++ b/1_data_process.ipynb
@@ -178,7 +178,7 @@
     "    return dat\n",
     "    \n",
     "dat = create_labels(dat)\n",
-    "       \n",
+    "\n",
     "print(dat.shape)"
    ]
   },
@@ -194,13 +194,7 @@
     "2. Think about what samples I would use for training, and for validation, based on bad rates\n",
     "2b. Write function to flexibly pick samples for training and for validation\n",
     "\n",
-    "3. Review my data to see where I have different distribution in loan durations etc.\n",
-    "(to inform my picking of samples)\n",
     "\n",
-    "7. (Later but soon) Check distribution of all variables for all the different snapshots\n",
-    "7b. Also note that the changing distribution can lead us to use fewer snapshots to train etc.\n",
-    "\n",
-    "9. Do a ...\n",
     "\"\"\"\n"
    ]
   },
@@ -276,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### QA1. Output the check list for the vars' values"
+    "### QA1. Output the check list for the vars' values"
    ]
   },
   {
