--- a/2_fit.ipynb
+++ b/2_fit.ipynb
@@ -83,6 +83,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DD 01/12/20: ToDo\n",
+    "- Do the split data after checking in 1_process\n",
+    "- Create a list of ...\n",
+    "\n",
+    "- Be very careful with top vars in the model e.g. the grade a,b,c,d vars or the fico vars (see if they should be there or not, check if they good between train and test e.g. in terms of grade a,b,c,d categories)\n",
+    "  - Thought: Grade b might mean sth very different in the test dataset so I don't know...\n",
+    "  - Are grades a,b,c,d consistent over time?\n",
+    "  \n",
+    "3. Review my data to see where I have different distribution in loan durations etc.\n",
+    "(to inform my picking of samples)\n",
+    "\n",
+    "7. (Later but soon) Check distribution of all variables for all the different snapshots\n",
+    "7b. Also note that the changing distribution can lead us to use fewer snapshots to train etc.\n",
+    "\n",
+    "9. Do a ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 165,
    "metadata": {},
